--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Elementos HTML</title>
+
 </head>
 <body>
+    <h1>Facultad de Telemática</h1>
     
+    <h2>Misión</h2>
+    <p>Formamos recursos humanos de Licenciatura y Posgrado eficientes y competitivos, socialmente comprometidos, capaces de innovar y adaptarse en el área de las Tecnologías de la Información y Comunicación (TIC) en los entornos nacional e internacional.</p>
+    <h3>Historia</h3>
+    <p>El inicio al impulso de las carreras de Informática-Computación en la Universidad de Colima, se dio en la facultad de Ingeniería Mecánica y Eléctrica, en el campus Coquimatlán con la carrera de Ingeniero en Sistemas Computacionales, y en las escuelas y facultades de Contabilidad y Administración del Estado, con la carrera de Licenciado en Informática.
+
+        Uno de los antecedentes de la actual Facultad de Telemática, que se encuentra ubicada en el campus Colima, fue la carrera de Licenciado en Informática que inició en Agosto de 1990 como respuesta a la necesidad detectada en el Estado de satisfacer la demanda de profesionistas que implementaran sistemas de información, utilizando nuevas tecnologías computacionales.</p>
 </body>
 </html>
