--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <h3>Historia</h3>
     <p>El inicio al impulso de las carreras de Informática-Computación en la Universidad de Colima, se dio en la facultad de Ingeniería Mecánica y Eléctrica, en el campus Coquimatlán con la carrera de Ingeniero en Sistemas Computacionales, y en las escuelas y facultades de Contabilidad y Administración del Estado, con la carrera de Licenciado en Informática.
 
-        Uno de los antecedentes de la actual Facultad de Telemática, que se encuentra ubicada en el campus Colima, fue la carrera de Licenciado en Informática que inició en Agosto de 1990 como respuesta a la necesidad detectada en el Estado de satisfacer la demanda de profesionistas que implementaran sistemas de información, utilizando nuevas tecnologías computacionales.</p>
+      Uno de los antecedentes de la actual Facultad de Telemática, que se encuentra ubicada en el campus Colima, fue la carrera de Licenciado en Informática que inició en Agosto de 1990 como respuesta a la necesidad detectada en el Estado de satisfacer la demanda de profesionistas que implementaran sistemas de información, utilizando nuevas tecnologías computacionales.</p>
+      <h4>Listas desordenadas</h4>
+      <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+      </ul>
+      <h5>Listas ordenadas</h5>
+      <ol>
+          <Li>Clase</Li>
+          <li>Objeto</li>
+      </ol>
 </body>
 </html>
