--- a/index.html
+++ b/index.html
@@ -26,5 +26,24 @@
           <Li>Clase</Li>
           <li>Objeto</li>
       </ol>
+      <h2>Tablas
+          <table>
+              <tr>
+                  <th>Num. cuenta</th>
+                  <th>Nombre</th>
+                  <th>Correo</th>
+              </tr>
+              <tr>
+                  <td> 2010-9843</td>
+                  <td>Juan Pérez</td>
+                  <td>juan.perez@gmail.com</td>
+              </tr>
+              <tr>
+                  <td>20165011</td>
+                  <td>Kenia Villa</td>
+                  <td>Kvilla4@ucol.mx</td>
+              </tr>
+          </table>
+      </h2>
 </body>
 </html>
