--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
                   <td>Kvilla4@ucol.mx</td>
               </tr>
           </table>
-      </h2>
+</h2>
+<h2>Formularios</h2>
+<form>
+    <div>
+        <label Nombre</label>
+        <label for "nombre">Nombre</label>
+        <input type="text" id="nombre">
+    </div>
+    <div>
+        <label for "email">correo</label>
+        <input type="email" id="email" />
+        </div>
+        <div>
+            <button type="submit">enviar</button> 
+        </div>
+</form>
 </body>
 </html>
